--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,11 @@
             android:label="@string/app_name"
             android:parentActivityName=".MainActivity">
         </activity>
+        <activity
+            android:name=".Timer"
+            android:label="@string/app_name"
+            android:parentActivityName=".MainActivity">
+        </activity>
     </application>
 
 </manifest>
