--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,11 @@
             android:label="@string/app_name"
             android:parentActivityName=".MainActivity">
         </activity>
+        <activity
+            android:name=".Plancheprogression"
+            android:label="@string/app_name"
+            android:parentActivityName=".MainActivity">
+        </activity>
     </application>
 
 </manifest>
