--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,49 +24,49 @@
         </activity>
         <activity
             android:name=".Back"
-            android:label="@string/app_name"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:label="Back"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".Biceps"
-            android:label="@string/app_name"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:label="Biceps"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".Chest"
-            android:label="@string/app_name"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:label="Chest"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".Triceps"
-            android:label="@string/app_name"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:label="Triceps"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".Frontlever"
-            android:label="@string/app_name"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:label="Frontlever"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".Planche"
-            android:label="@string/app_name"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:label="Planche"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".Routine"
-            android:label="@string/app_name"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:label="Routine"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".Timer"
-            android:label="@string/app_name"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:label="Timer"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".Plancheprogression"
-            android:label="@string/app_name"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:label="Plancheprogression"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+        android:name=".PowerPullup"
+        android:label="Powertraining/Back/Pullup"/>
+        <activity
+            android:name=".PowerDip"
+            android:label="Powertraining/Chest/Dip"/>
+        <activity
+            android:name=".PowerShoulderpress"
+            android:label="Powertraining/Shoulder/Shoulderpress"/>
     </application>
 
 </manifest>
